// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup page displays an error if we enter an invalid name 1`] = `
Array [
  <span
    className="error"
  >
    REQ_FULL_NAME
  </span>,
  <span
    className="error"
  >
    REQ_EMAIL
  </span>,
  <span
    className="error"
  >
    REQ_PHONE
  </span>,
]
`;

exports[`Signup page displays an error if we enter an invalid phone number 1`] = `
Array [
  <span
    className="error"
  >
    REQ_NAME
  </span>,
  <span
    className="error"
  >
    REQ_EMAIL
  </span>,
  <span
    className="error"
  >
    REQ_VALID_PHONE
  </span>,
]
`;

exports[`Signup page displays an error if we submit without filling the email 1`] = `
<span
  className="error"
>
  REQ_EMAIL
</span>
`;

exports[`Signup page displays an error if we submit without filling the name 1`] = `
<span
  className="error"
>
  REQ_NAME
</span>
`;

exports[`Signup page displays an error if we submit without filling the phone number 1`] = `
<span
  className="error"
>
  REQ_PHONE
</span>
`;

exports[`Signup page redirects if we are logged in 1`] = `
<Redirect
  to="/"
/>
`;

exports[`Signup page renders without crashing 1`] = `
<section
  className="signup section full-min-height is-flex"
>
  <div
    className="container mt-50"
  >
    <Logo />
  </div>
  <div
    className="container mt-50"
  >
    <Tabs
      tabs={
        Array [
          Object {
            "title": "TAB_TITLE_LOGIN",
            "url": "/login",
          },
          Object {
            "active": true,
            "title": "TAB_TITLE_SIGNUP",
            "url": "/sign-up",
          },
        ]
      }
    />
  </div>
  <div
    className="container is-flex mt-75"
  >
    <form
      className="control"
      onSubmit={[Function]}
    >
      <div
        className="container columns full-height is-flex has-text-centered"
      >
        <div
          className="column is-hidden-mobile"
        />
        <div
          className="column"
        >
          <TextField
            input={
              Object {
                "name": "name",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "value": "",
              }
            }
            meta={Object {}}
            placeholder="PLACEHOLDER_NAME"
          />
          <AsyncTextField
            autoComplete="email"
            input={
              Object {
                "name": "email",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "value": "",
              }
            }
            loading={false}
            meta={
              Object {
                "error": false,
              }
            }
            placeholder="PLACEHOLDER_EMAIL"
            type="email"
          />
          <TextField
            autoComplete="tel"
            input={
              Object {
                "name": "phoneNumber",
                "onBlur": [Function],
                "onChange": [Function],
                "onFocus": [Function],
                "value": "",
              }
            }
            meta={Object {}}
            placeholder="PLACEHOLDER_PHONE"
          />
        </div>
        <div
          className="column"
        >
          <div
            className="field is-grouped is-grouped-centered"
          >
            <p
              className="control"
            >
              <button
                className="button is-primary"
                disabled={false}
                type="submit"
              >
                BTN_NEXT
              </button>
            </p>
          </div>
        </div>
      </div>
    </form>
  </div>
</section>
`;
